# node-pod-orchestration

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  down.sh  pyproject.toml  setup.sh
.github/workflows/: build-push-docker.yml
helm/node-pod-orchestration/templates/: node-pod-orchestration-role.yaml  postgresql-service.yaml
k8/: node-pod-orchestraion-service.yaml  node-pod-orchestration-deployment.yaml  node-pod-orchestration-role.yaml  node-pod-orchestration-rolebinding.yaml  node-pod-orchestration-service.yaml  postgresql-deployment.yaml  postgresql-service.yaml
project/: main.py
project/api/: api-dev  note.md
project/api/po_servers/: api.py
project/api/po_servers/endpoints/: analysis.py  analysis_info.py  entity.py
project/run/: Dockerfile  note.md  r.txt  test_app.py  utils.py
src/: api.py  main.py
src/api/: api.py  oauth.py
src/k8s/: kubernetes.py  utils.py
src/resources/: utils.py
src/resources/analysis/: constants.py  entity.py
src/resources/database/: db_models.py  entity.py  minio.py
src/resources/log/: entity.py
src/status/: constants.py  status.py
src/test/: test_db.py
src/utils/: db.py  docker.py  hub_client.py  kubernetes.py  other.py  po_logging.py  token.py
tests/: api_test.py  conftest.py  run_util_test.py  test_api_api.py  test_api_oauth.py  test_database_entity.py  test_database_models.py  test_db.py  test_k8s_kubernetes.py  test_k8s_utils.py  test_main.py  test_resources_analysis_entity.py  test_resources_log_entity.py  test_resources_utils.py  test_status_constants.py  test_status_status.py  test_utils_hub_client.py  test_utils_other.py  test_utils_po_logging.py  test_utils_token.py
tobedeleted/: constants.py  down.sh  setup.sh  update.sh
tobedeleted/po_servers/: api.py
tobedeleted/po_servers/endpoints/: analysis.py  analysis_info.py  entity.py
tobedeleted/run/: note.md  utils.py
