[tool.poetry]
name = "python-template-repo"
version = "0.1.0"
description = ""
authors = ["Maximilian Jugl <Maximilian.Jugl@medizin.uni-leipzig.de>"]
readme = "README.md"
packages = [{ include = "project" }]

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "^28.1.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
docker = "^7.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.26"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.8"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
