[tool.poetry]
name = "Node-Pod-Orchestration"
version = "0.1.0"
description = ""
authors = ["Alexander Röhl <alexander.roehl@uni-tuebingen.de>","David Hieber <david.hieber@uni-tuebingen.de>", "Maximilian Jugl <Maximilian.Jugl@medizin.uni-leipzig.de>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
kubernetes = "^28.1.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
docker = "^7.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.26"
python-dotenv = "^0.21.0"
kong-admin-client = {git = "https://github.com/PrivateAIM/kong-admin-python-client.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.8"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
